tests/dev_server/errors/stories/js_importing_node/main.js
// above 1
// above 2
// above 3
/* before */ import { writeFileSync } from "node:fs"; /* after */
// below 1
// below 2
// below 3

console.log(writeFileSync);
